<?php defined('_JEXEC') or die(); ?>

=====================================================================
CMC 3.0.1 - Released 02-September-2016
=====================================================================
# couldn't show more than 10 mailchimp lists for syncing
# 400: is already a list member. Use PUT to insert or update list members.
# php warnings in the user - cmc plugin

=====================================================================
CMC 3.0.0 - Released 16-August-2015
=====================================================================
^ Major rewrite to Mailchimp API v3 (previous versions of CMC will stop to function on 31.12.2016 since Mailchimp has deprecated the user of API v1.3)
~ all ecommerce 360 plugins use the new API
+ added option for disabling the double opt-in
~ no notices on PHP7
~ bug fixes

=====================================================================
CMC 2.0.0 - Released 07-July-2015
=====================================================================
+ updated the CB plugin to work with CB 2.0
+ updated the Jomsocial plugin to work with the latest Jomsocial version
+ admins are able to edit the newsletter subscription of a user in the user manager in backend
+ users are able to edit their newsletter subscriptions on their user profile in the frontend
+ administrators are able to edit the newsletter subscription, merge fields and interest in the cmc backend
+ users are able to edit their subscriptions in their CB profile in the frontend
+ pop-up signup form
+ floating signup form (left, right, bottom)
+ edit of the subscription for logged in users is possible directly on the site
+ added JED review request on the dashboard
+ option to gather anonymous stats about the environment & configuration of the extension
~ general bug fixes and code cleanup

=====================================================================
CMC 1.5.2 - Released 08-October-2014